добавил секцию удаления PG

--- a/prepare_server.yml
+++ b/prepare_server.yml
@@ -16,5 +16,5 @@
 
     - name: remove the PG-11 package
       yum:
-        name: postgresql-11*
+        name: postgresql*
         state: absent
